linked to admob
i linked my admob ad_unit_id and also renamed the applicationId

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,7 +21,7 @@ android {
         instrumentTest.setRoot('tests')
     }
     defaultConfig {
-        applicationId "com.starcat.fishy"
+        applicationId "com.starcat.fishy.free"
         minSdkVersion 9
         targetSdkVersion 24
     }
