--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,7 +21,7 @@ android {
         instrumentTest.setRoot('tests')
     }
     defaultConfig {
-        applicationId "com.startcat.fishy"
+        applicationId "com.startcat.fishy.premium"
         minSdkVersion 9
         targetSdkVersion 24
     }
