--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ allprojects {
 
     version = '1.0'
     ext {
-        appName = "fishy"
+        appName = "Fishy Premium"
         gdxVersion = '1.9.3'
         roboVMVersion = '2.1.0'
         box2DLightsVersion = '1.4'
